--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
   <hr size="3" noshade>
 
-  <a href="#">My Hobbies</a>
+  <a href="MyHobbies.html">My Hobbies</a>
   <a href="ContactInfo.html">Contact Me</a>
 
 </body>
